fix CSS alignment of traffic-light count hover-tip

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -91,8 +91,6 @@
 .traffic-light-diff-tip-tag {
   @include non-code-font;
        font-size: 12px;
-         display: table-cell;
-  vertical-align: middle;
 }
 
 .traffic-light-diff-tip-traffic-light-image {
